--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
-    "gymnasium>=1.0.0",
+    "gymnasium<1.0",
     "ipykernel>=6.29.5",
+    "matplotlib>=3.9.2",
     "numpy<2.0",
     "pandas>=2.2.3",
+    "tqdm>=4.67.0",
 ]
